<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maxCalculatorLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/calculatorDesc"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/maxCalculator" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculatorDesc"
        android:layout_gravity="center"
        android:hint="@string/weightHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/reps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_gravity="center"
        android:hint="@string/repsHint"
        android:inputType="number" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reps"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/maxDesc"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/max" />

        <TextView
            android:id="@+id/theoreticalMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/maxDesc"
            android:layout_centerHorizontal="true"
            android:textColor="#00F"
            android:textSize="30px"
            android:typeface="monospace" />
    </RelativeLayout>

</RelativeLayout>